[tool.poetry]
name = "compoz"
version = "0.1.0"
description = "A simple composition library"
authors = ["Harold Cohen <me@harold-cohen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
